<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center|center_vertical"
    android:background="@color/Grisa"
    android:gravity="left"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:text="@string/bilatu_hondakina"
                android:textColor="@color/Beltza"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/izena"
                android:textColor="@color/Grisa" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:contentDescription="@string/Irudia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:scaleType="centerInside"
                android:src="@drawable/berdea"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/izen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/sartu_h" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/Tokia"
        android:textColor="@color/Grisa" />

    <EditText
        android:id="@+id/non"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/where"/>

    <TextView
        android:id="@+id/tv3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/Informazioa"
        android:textColor="@color/Grisa" />

    <EditText
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.28"
        android:clickable="false"
        android:focusable="false" 
        android:hint="@string/points"/>

    <Button
        android:id="@+id/botoi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Itzuli" >
    </Button>

</LinearLayout>
