<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center|center_vertical"
    android:orientation="vertical"    
     android:background="@drawable/atzealdea"
     >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical|right"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

            <TextView
                android:id="@+id/tv0"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="center"
                android:text="@string/bilatu_hondakina"
                android:textColor="@color/Beltza"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/bilatzekoa"
                android:textColor="@color/Grisa"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical" 
           android:gravity="right">

 <TextView
     android:id="@+id/tv5"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="right"
     android:text="@string/hizkuntza_aldatu"
     android:textColor="@color/Grisa" />

        <ToggleButton
            android:id="@+id/hizkuntza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:checked="True"
            android:gravity="right"
            android:paddingRight="10dp"
            android:textOff="Español"
            android:textOn="Euskara" />

</LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/bilatu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_hondakina"
        android:inputType="textNoSuggestions" 
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/atzealdeagt"
        android:overScrollHeader="@drawable/atzealdeagt" 
        android:focusable="@drawable/atzealdeagt">
    </ListView>

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/Irudia"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:scaleType="centerInside"
        android:src="@drawable/morea"
        android:visibility="visible" />

</LinearLayout>
