<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_weight="1" >

    <!-- Menu Panel -->

    <RelativeLayout
        android:id="@+id/menuPanel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/oina"
        android:gravity="right"
        android:orientation="vertical"
        android:windowSoftInputMode="stateVisible|adjustPan" >

        <Button
            android:id="@+id/menu_berziklapp"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0dp"
            android:background="#353535"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white" >
        </Button>

        <View
            android:id="@+id/menu_item_divider_1"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/menu_berziklapp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="#b5b5b5" />

        <Button
            android:id="@+id/menu_bilaketa"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/menu_item_divider_1"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/bilaketa" >
        </Button>

        <View
            android:id="@+id/menu_item_dividerra"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/menu_bilaketa"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="#b5b5b5" />

        <Button
            android:id="@+id/menu_motak"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/menu_item_dividerra"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/motak" >
        </Button>

        <View
            android:id="@+id/menu_item_divider_2"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/menu_motak"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#b5b5b5" />

        <Button
            android:id="@+id/menu_astea"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/menu_item_divider_2"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/astegunak" >
        </Button>

        <View
            android:id="@+id/menu_item_divider_3"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/menu_astea"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#b5b5b5" />

        <Button
            android:id="@+id/menu_hizkuntza"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/menu_item_divider_3"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/hizkuntza" >
        </Button>
    </RelativeLayout>

    <!-- Sliding Panel -->

    <LinearLayout
        android:id="@+id/slidingPanel"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/white"
        android:gravity="left"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="50dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|right"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/menua"
                        android:textColor="@color/Grisa" />

                    <ImageView
                        android:id="@+id/menuViewButton"
                        android:contentDescription="@string/Irudia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:clickable="true"
                        android:src="@drawable/fletxa"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv0"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:gravity="center"
                        android:text="@string/bilatu_hondakina"
                        android:textColor="@color/Beltza"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="10dp"
                        android:text="@string/bilatzekoa"
                        android:textColor="@color/Grisa" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/header_vertical_divider_1"
                android:layout_width="2dp"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/menuViewButton" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center|center_vertical"
            android:background="@drawable/atzealdea"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/bilatu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/insert_hondakina"
                android:inputType="textNoSuggestions" />

            <ListView
                android:id="@+id/android:list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/atzealdeagt"
                android:focusable="@drawable/atzealdeagt"
                android:overScrollHeader="@drawable/atzealdeagt" >
            </ListView>

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/atzealdeagt"
                android:focusable="@drawable/atzealdeagt"
                android:overScrollHeader="@drawable/atzealdeagt" >
            </ListView>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:contentDescription="@string/Irudia"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:scaleType="centerInside"
                android:src="@drawable/morea"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>